# kyle-portfolio

./: .gitignore  METADATA_QUICK_GUIDE.md  PROJECT_SETUP.md  README.md  bunfig.toml  next.config.mjs  package-lock.json  package.json  tailwind.config.js
.next/: app-build-manifest.json  trace
.next/server/: app-paths-manifest.json  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
.next/server/app/: page.js  page_client-reference-manifest.js
.next/server/vendor-chunks/: countup.js.js  esprima.js  extend-shallow.js  gray-matter.js  is-extendable.js  kind-of.js  next.js  (+3 more)
ai-agent/: README.md  dolphin_parser.py  gemini_llm.py  ingest_lightrag.py  ingest_portfolio_rag.py  pyproject.toml  query_lightrag.py  requirements.txt  test_github_ingestion.py  test_user_repos.py
ai-agent/data/documents/: projectsData.txt
ai-agent/data/faiss_index/: portfolio_index.faiss  portfolio_metadata.json
app/: globals.css  layout.jsx  page.jsx
app/contact/: page.jsx
app/guides/: page.jsx
app/projects/: page.jsx
app/resume/: page.jsx
app/services/: page.jsx
components/: AiAgent.jsx  Footer.jsx  Header.jsx  MobileNav.jsx  Nav.jsx  PageTransition.jsx  Photo.jsx  QuoteCycler.jsx  Social.jsx  Stairs.jsx  Stats.jsx  ThemeToggle.jsx  Timeline.jsx
components/ui/: button.jsx  input.jsx  select.jsx  sheet.jsx  tabs.jsx  textarea.jsx
context/: ThemeContext.jsx
lib/: projectsData.js  rag.js
posts/: amazon-ecommerce-sd.mdx
public/assets/: localhost.html
scripts/: upload-videos.js
(+249 files in other folders)
